--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ bootstrap/cache/
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+/public/storage
+/public/css
+/public/js
+/storage/*.key
+/.idea
+Homestead.json
+Homestead.yaml
