Removed build files

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
 vendor/
 node_modules/
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
 .env.*.php
 .env.php
 .env
+.env.*
+!.env.example
 
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
 
-/public/storage
+/public/build
 /public/css
 /public/js
+/public/storage
 /storage/*.key
+
 /.idea
 Homestead.json
 Homestead.yaml
